Mini_0Parser.py
# Generated from Mini_0.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Mini_0Parser ( Parser ):

    grammarFileName = "Mini_0.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'if'", "'else'", 
                     "'end'", "'while'", "'loop'", "'fun'", "'return'", 
                     "'new'", "'string'", "'int'", "'char'", "'bool'", "'and'", 
                     "'or'", "'not'", "'<'", "'>'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "','", 
                     "':'", "'>='", "'<='", "'='", "'<>'", "'.'" ]

    symbolicNames = [ "<INVALID>", "OP_BOOL", "OP_REL", "COMMENT", "LINE_COMMENT", 
                      "NL", "LITNUMERAL", "LITSTRING", "LITCHAR", "TRUE", 
                      "FALSE", "IF", "ELSE", "END", "WHILE", "LOOP", "FUN", 
                      "RETURN", "NEW", "STRING", "INT", "CHAR", "BOOL", 
                      "AND", "OR", "NOT", "LESS", "GREATER", "LEFTPAREN", 
                      "RIGHTPAREN", "LEFTBRACKET", "RIGHTBRACKET", "LEFTBRACE", 
                      "RIGHTBRACE", "PLUS", "MINUS", "STAR", "DIV", "COMMA", 
                      "COLON", "GREATEREQUAL", "LESSEQUAL", "EQUAL", "DIFFERENT", 
                      "DOT", "ID", "WS" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_listadecl = 2
    RULE_decl = 3
    RULE_nl = 4
    RULE_glbal = 5
    RULE_funcion = 6
    RULE_listaBloque = 7
    RULE_bloque = 8
    RULE_listaComando = 9
    RULE_params = 10
    RULE_parametro = 11
    RULE_tipobase = 12
    RULE_tipo = 13
    RULE_var = 14
    RULE_declvar = 15
    RULE_cmdif = 16
    RULE_cmdwhile = 17
    RULE_cmdasign = 18
    RULE_llamada = 19
    RULE_listaexp = 20
    RULE_cmdreturn = 21
    RULE_op1 = 22
    RULE_op2 = 23
    RULE_exprAritmetica = 24
    RULE_termAritmetico = 25
    RULE_factorAritmetico = 26
    RULE_exprRelacional = 27
    RULE_termRelacional = 28
    RULE_exp = 29

    ruleNames =  [ "programa", "comando", "listadecl", "decl", "nl", "glbal", 
                   "funcion", "listaBloque", "bloque", "listaComando", "params", 
                   "parametro", "tipobase", "tipo", "var", "declvar", "cmdif", 
                   "cmdwhile", "cmdasign", "llamada", "listaexp", "cmdreturn", 
                   "op1", "op2", "exprAritmetica", "termAritmetico", "factorAritmetico", 
                   "exprRelacional", "termRelacional", "exp" ]

    EOF = Token.EOF
    OP_BOOL=1
    OP_REL=2
    COMMENT=3
    LINE_COMMENT=4
    NL=5
    LITNUMERAL=6
    LITSTRING=7
    LITCHAR=8
    TRUE=9
    FALSE=10
    IF=11
    ELSE=12
    END=13
    WHILE=14
    LOOP=15
    FUN=16
    RETURN=17
    NEW=18
    STRING=19
    INT=20
    CHAR=21
    BOOL=22
    AND=23
    OR=24
    NOT=25
    LESS=26
    GREATER=27
    LEFTPAREN=28
    RIGHTPAREN=29
    LEFTBRACKET=30
    RIGHTBRACKET=31
    LEFTBRACE=32
    RIGHTBRACE=33
    PLUS=34
    MINUS=35
    STAR=36
    DIV=37
    COMMA=38
    COLON=39
    GREATEREQUAL=40
    LESSEQUAL=41
    EQUAL=42
    DIFFERENT=43
    DOT=44
    ID=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listadecl(self):
            return self.getTypedRuleContext(Mini_0Parser.ListadeclContext,0)


        def EOF(self):
            return self.getToken(Mini_0Parser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(Mini_0Parser.NL)
            else:
                return self.getToken(Mini_0Parser.NL, i)

        def getRuleIndex(self):
            return Mini_0Parser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = Mini_0Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Mini_0Parser.NL:
                self.state = 60
                self.match(Mini_0Parser.NL)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.listadecl()
            self.state = 67
            self.match(Mini_0Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoComando = None

        def cmdif(self):
            return self.getTypedRuleContext(Mini_0Parser.CmdifContext,0)


        def cmdwhile(self):
            return self.getTypedRuleContext(Mini_0Parser.CmdwhileContext,0)


        def cmdasign(self):
            return self.getTypedRuleContext(Mini_0Parser.CmdasignContext,0)


        def cmdreturn(self):
            return self.getTypedRuleContext(Mini_0Parser.CmdreturnContext,0)


        def llamada(self):
            return self.getTypedRuleContext(Mini_0Parser.LlamadaContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = Mini_0Parser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.cmdif()
                localctx.tipoComando="Condicion"
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.cmdwhile()
                localctx.tipoComando="Repeticion"
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.cmdasign()
                localctx.tipoComando="Asignacion"
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.cmdreturn()
                localctx.tipoComando="Retornar"
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.llamada()
                localctx.tipoComando="Llamada"
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(Mini_0Parser.DeclContext,0)


        def listadecl(self):
            return self.getTypedRuleContext(Mini_0Parser.ListadeclContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_listadecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListadecl" ):
                listener.enterListadecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListadecl" ):
                listener.exitListadecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListadecl" ):
                return visitor.visitListadecl(self)
            else:
                return visitor.visitChildren(self)




    def listadecl(self):

        localctx = Mini_0Parser.ListadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listadecl)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.decl()
                self.state = 87
                self.listadecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion(self):
            return self.getTypedRuleContext(Mini_0Parser.FuncionContext,0)


        def glbal(self):
            return self.getTypedRuleContext(Mini_0Parser.GlbalContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = Mini_0Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini_0Parser.FUN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.funcion()
                pass
            elif token in [Mini_0Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.glbal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(Mini_0Parser.NL, 0)

        def getRuleIndex(self):
            return Mini_0Parser.RULE_nl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNl" ):
                listener.enterNl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNl" ):
                listener.exitNl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNl" ):
                return visitor.visitNl(self)
            else:
                return visitor.visitChildren(self)




    def nl(self):

        localctx = Mini_0Parser.NlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(Mini_0Parser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlbalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declvar(self):
            return self.getTypedRuleContext(Mini_0Parser.DeclvarContext,0)


        def nl(self):
            return self.getTypedRuleContext(Mini_0Parser.NlContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_glbal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlbal" ):
                listener.enterGlbal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlbal" ):
                listener.exitGlbal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlbal" ):
                return visitor.visitGlbal(self)
            else:
                return visitor.visitChildren(self)




    def glbal(self):

        localctx = Mini_0Parser.GlbalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_glbal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.declvar()
            self.state = 99
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(Mini_0Parser.FUN, 0)

        def ID(self):
            return self.getToken(Mini_0Parser.ID, 0)

        def LEFTPAREN(self):
            return self.getToken(Mini_0Parser.LEFTPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(Mini_0Parser.ParamsContext,0)


        def RIGHTPAREN(self):
            return self.getToken(Mini_0Parser.RIGHTPAREN, 0)

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini_0Parser.NlContext)
            else:
                return self.getTypedRuleContext(Mini_0Parser.NlContext,i)


        def listaBloque(self):
            return self.getTypedRuleContext(Mini_0Parser.ListaBloqueContext,0)


        def END(self):
            return self.getToken(Mini_0Parser.END, 0)

        def COLON(self):
            return self.getToken(Mini_0Parser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini_0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = Mini_0Parser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(Mini_0Parser.FUN)
            self.state = 102
            self.match(Mini_0Parser.ID)
            self.state = 103
            self.match(Mini_0Parser.LEFTPAREN)
            self.state = 104
            self.params()
            self.state = 105
            self.match(Mini_0Parser.RIGHTPAREN)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Mini_0Parser.COLON:
                self.state = 106
                self.match(Mini_0Parser.COLON)
                self.state = 107
                self.tipo()


            self.state = 110
            self.nl()
            self.state = 111
            self.listaBloque()
            self.state = 112
            self.match(Mini_0Parser.END)
            self.state = 113
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaBloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(Mini_0Parser.BloqueContext,0)


        def listaBloque(self):
            return self.getTypedRuleContext(Mini_0Parser.ListaBloqueContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_listaBloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaBloque" ):
                listener.enterListaBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaBloque" ):
                listener.exitListaBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaBloque" ):
                return visitor.visitListaBloque(self)
            else:
                return visitor.visitChildren(self)




    def listaBloque(self):

        localctx = Mini_0Parser.ListaBloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listaBloque)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.bloque()
                self.state = 117
                self.listaBloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini_0Parser.NlContext)
            else:
                return self.getTypedRuleContext(Mini_0Parser.NlContext,i)


        def declvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini_0Parser.DeclvarContext)
            else:
                return self.getTypedRuleContext(Mini_0Parser.DeclvarContext,i)


        def listaComando(self):
            return self.getTypedRuleContext(Mini_0Parser.ListaComandoContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = Mini_0Parser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 121
                    self.declvar()
                    self.state = 122
                    self.nl() 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Mini_0Parser.IF) | (1 << Mini_0Parser.WHILE) | (1 << Mini_0Parser.RETURN) | (1 << Mini_0Parser.ID))) != 0):
                self.state = 129
                self.listaComando()


            self.state = 132
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cmd = None # ComandoContext

        def nl(self):
            return self.getTypedRuleContext(Mini_0Parser.NlContext,0)


        def listaComando(self):
            return self.getTypedRuleContext(Mini_0Parser.ListaComandoContext,0)


        def comando(self):
            return self.getTypedRuleContext(Mini_0Parser.ComandoContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_listaComando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaComando" ):
                listener.enterListaComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaComando" ):
                listener.exitListaComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaComando" ):
                return visitor.visitListaComando(self)
            else:
                return visitor.visitChildren(self)




    def listaComando(self):

        localctx = Mini_0Parser.ListaComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listaComando)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                localctx.cmd = self.comando()
                print("Aparecio un comando de tipo",localctx.cmd.tipoComando)
                self.state = 136
                self.nl()
                self.state = 137
                self.listaComando()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                localctx.cmd = self.comando()
                print("Aparecio un comando de tipo",localctx.cmd.tipoComando)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini_0Parser.ParametroContext)
            else:
                return self.getTypedRuleContext(Mini_0Parser.ParametroContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Mini_0Parser.COMMA)
            else:
                return self.getToken(Mini_0Parser.COMMA, i)

        def getRuleIndex(self):
            return Mini_0Parser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = Mini_0Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini_0Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.parametro()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Mini_0Parser.COMMA:
                    self.state = 145
                    self.match(Mini_0Parser.COMMA)
                    self.state = 146
                    self.parametro()
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [Mini_0Parser.RIGHTPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Mini_0Parser.ID, 0)

        def COLON(self):
            return self.getToken(Mini_0Parser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini_0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini_0Parser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = Mini_0Parser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(Mini_0Parser.ID)
            self.state = 156
            self.match(Mini_0Parser.COLON)
            self.state = 157
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipobaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoDato = None

        def INT(self):
            return self.getToken(Mini_0Parser.INT, 0)

        def BOOL(self):
            return self.getToken(Mini_0Parser.BOOL, 0)

        def CHAR(self):
            return self.getToken(Mini_0Parser.CHAR, 0)

        def STRING(self):
            return self.getToken(Mini_0Parser.STRING, 0)

        def getRuleIndex(self):
            return Mini_0Parser.RULE_tipobase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipobase" ):
                listener.enterTipobase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipobase" ):
                listener.exitTipobase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipobase" ):
                return visitor.visitTipobase(self)
            else:
                return visitor.visitChildren(self)




    def tipobase(self):

        localctx = Mini_0Parser.TipobaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipobase)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini_0Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(Mini_0Parser.INT)
                localctx.tipoDato= "INT"
                pass
            elif token in [Mini_0Parser.BOOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(Mini_0Parser.BOOL)
                localctx.tipoDato = "BOOL"
                pass
            elif token in [Mini_0Parser.CHAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(Mini_0Parser.CHAR)
                localctx.tipoDato = "CHAR"
                pass
            elif token in [Mini_0Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.match(Mini_0Parser.STRING)
                localctx.tipoDato= "STRING"
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoDato = None
            self._tipobase = None # TipobaseContext
            self._tipo = None # TipoContext
